feat(semana8): configuracao de deploy Railway e CORS por variavel de ambiente
- railway.json com builder Dockerfile e restart policy
- SecurityConfig: origens CORS lidas de cors.allowed-origins (default localhost:4200)
  permitindo adicionar URL de producao via variavel de ambiente

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>